--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"react-native-loader-kit": "^2.0.8",
 		"react-native-reanimated": "~3.6.2",
 		"react-native-safe-area-context": "4.8.2",
-		"react-native-screens": "~3.29.0",
+		"react-native-screens": "^3.32.0",
 		"react-native-track-player": "^4.1.1",
 		"ts-pattern": "^5.0.8",
 		"zustand": "^4.5.2"
