--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"expo-dev-client": "~3.3.11",
 		"expo-linear-gradient": "~12.7.2",
 		"expo-linking": "~6.2.2",
+		"expo-media-library": "^16.0.4",
+		"expo-music-library": "^0.1.2",
 		"expo-router": "~3.4.8",
 		"expo-status-bar": "~1.11.1",
 		"react": "18.2.0",
